--- a/libro/Seguridad.tex
+++ b/libro/Seguridad.tex
@@ -36,50 +36,54 @@ Para el desarrollo posterior nos serán útiles algunas definiciones
 recogidas en la ITC-BT-01:
 \begin{description}
 \item [{Contacto~Directo:}] contacto de personas o animales con partes
-activas de los materiales y equipos.
-\item [{Contacto~Indirecto:}] contacto de personas o animales con partes
-que se han puesto bajo tensión como resultado de un fallo de aislamiento.
-\item [{Partes~Activas:}] Conductores y piezas conductoras bajo tensión
-en servicio normal. Incluyen el conductor neutro o compensador y las
-partes a ellos conectadas.
+  activas de los materiales y equipos.
+\item [{Contacto~Indirecto:}] contacto de personas o animales con
+  partes que se han puesto bajo tensión como resultado de un fallo de
+  aislamiento.
+\item [{Partes~Activas:}] Conductores y piezas conductoras bajo
+  tensión en servicio normal. Incluyen el conductor neutro o
+  compensador y las partes a ellos conectadas.
 \item [{Masa:}] Conjunto de las partes metálicas de un aparato que, en
-condiciones normales, están aisladas de las partes activas.
-\item [{Tierra:}] Masa conductora de la tierra en la que el potencial eléctrico
-en cada punto se toma, convencionalmente, igual a cero.
-\item [{Toma~de~tierra:}] Electrodo, o conjunto de electrodos, en contacto
-con el suelo y que asegura la conexión eléctrica con el mismo.
-\item [{Material~de~clase~0:}] Material en el cual la protección contra
-el choque eléctrico se basa en el aislamiento principal; lo que implica
-que no existe ninguna disposición prevista para la conexión de las
-partes activas accesibles, si las hay, a un conductor de protección
-que forme parte del cableado fijo de la instalación. La protección
-en caso de defecto en el aislamiento principal depende del entorno.
-\item [{Material~de~clase~I:}] la protección contra el choque eléctrico
-no se basa únicamente en el aislamiento principal, sino que comporta
-una medida de seguridad complementaria en forma de medios de conexión
-de las partes conductoras accesibles a un conductor de protección
-puesto a tierra, que forma parte del cableado fijo de la instalación,
-de forma tal que las partes conductoras accesibles no puedan presentar
-tensiones peligrosas.
-\item [{Material~de~clase~II:}] la protección comporta medidas de seguridad
-complementarias, tales como el doble aislamiento o aislamiento reforzado.
-Estas medidas no suponen la utilización de puesta a tierra para la
-protección y no dependen de las condiciones de la instalación. Este
-material debe estar alimentado por cables con doble aislamiento o
-con aislamiento reforzado.
-\item [{Material~de~clase~III:}] la protección no se basa en la alimentación
-a muy baja tensión y en el cual no se producen tensiones superiores
-a 50 V en c.a. ó a 75 V en c.c.
-\item [{Tensión~de~contacto:}] Tensión que aparece entre partes accesibles
-simultáneamente, al ocurrir un fallo de aislamiento. Por convenio
-este término sólo se utiliza en relación con la protección contra
-contactos indirectos. En ciertos casos el valor de la tensión de contacto
-puede resultar influido notablemente por la impedancia que presenta
-la persona en contacto con esas partes.
-\item [{Tensión~de~defecto:}] Tensión que aparece a causa de un defecto
-de aislamiento, entre dos masas, entre una masa y un elemento conductor,
-o entre una masa y una toma de tierra de referencia, es decir, un
-punto en el que el potencial no se modifica al quedar la masa en tensión.
+  condiciones normales, están aisladas de las partes activas.
+\item [{Tierra:}] Masa conductora de la tierra en la que el potencial
+  eléctrico en cada punto se toma, convencionalmente, igual a cero.
+\item [{Toma~de~tierra:}] Electrodo, o conjunto de electrodos, en
+  contacto con el suelo y que asegura la conexión eléctrica con el
+  mismo.
+\item [{Material~de~clase~0:}] Material en el cual la protección
+  contra el choque eléctrico se basa en el aislamiento principal; lo
+  que implica que no existe ninguna disposición prevista para la
+  conexión de las partes activas accesibles, si las hay, a un
+  conductor de protección que forme parte del cableado fijo de la
+  instalación. La protección en caso de defecto en el aislamiento
+  principal depende del entorno.
+\item [{Material~de~clase~I:}] la protección contra el choque
+  eléctrico no se basa únicamente en el aislamiento principal, sino
+  que comporta una medida de seguridad complementaria en forma de
+  medios de conexión de las partes conductoras accesibles a un
+  conductor de protección puesto a tierra, que forma parte del
+  cableado fijo de la instalación, de forma tal que las partes
+  conductoras accesibles no puedan presentar tensiones peligrosas.
+\item [{Material~de~clase~II:}] la protección comporta medidas de
+  seguridad complementarias, tales como el doble aislamiento o
+  aislamiento reforzado.  Estas medidas no suponen la utilización de
+  puesta a tierra para la protección y no dependen de las condiciones
+  de la instalación. Este material debe estar alimentado por cables
+  con doble aislamiento o con aislamiento reforzado.
+\item [{Material~de~clase~III:}] la protección se basa en la
+  alimentación a muy baja tensión y en el cual no se producen
+  tensiones superiores a 50 V en c.a. ó a 75 V en c.c.
+\item [{Tensión~de~contacto:}] Tensión que aparece entre partes
+  accesibles simultáneamente, al ocurrir un fallo de aislamiento. Por
+  convenio este término sólo se utiliza en relación con la protección
+  contra contactos indirectos. En ciertos casos el valor de la tensión
+  de contacto puede resultar influido notablemente por la impedancia
+  que presenta la persona en contacto con esas partes.
+\item [{Tensión~de~defecto:}] Tensión que aparece a causa de un
+  defecto de aislamiento, entre dos masas, entre una masa y un
+  elemento conductor, o entre una masa y una toma de tierra de
+  referencia, es decir, un punto en el que el potencial no se modifica
+  al quedar la masa en tensión.
 \end{description}
 Para los esquemas de conexión a tierra se emplea una codificación
 basada en dos letras:
